--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,110 +1,10 @@
 name: Release
 on:
-    push:
-        branches:
-            - jk-test
+    create:
         tags:
             - 'v**'
 jobs:
-    lint:
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                python-version: [3.9]
-            fail-fast: false
-
-        steps:
-            - name: checkout repo
-              uses: actions/checkout@v2
-
-            - name: set up python
-              uses: actions/setup-python@v2
-              with:
-                  python-version: ${{ matrix.python-version }}
-
-            - name: set up node
-              uses: actions/setup-node@v2
-              with:
-                  node-version: '12'
-
-            - name: install poetry
-              uses: snok/install-poetry@v1.1.1
-              with:
-                  version: 1.1.4
-                  virtualenvs-create: true
-                  virtualenvs-in-project: true
-
-            - name: load cached venv
-              id: cached-poetry-dependencies
-              uses: actions/cache@v2
-              with:
-                  path: .venv
-                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}-${{ secrets.CACHE_VERSION }}
-
-            - name: install poetry dependencies
-              run: poetry install
-              if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-
-            - name: load cached npm
-              id: cached-npm-dependencies
-              uses: actions/cache@v2
-              with:
-                  path: ~/.npm
-                  key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}-${{ secrets.CACHE_VERSION }}
-
-            - name: install pyright dependencies
-              run: sudo npm install -g pyright
-
-            - name: lint
-              run: |
-                  source ./.venv/bin/activate
-                  poe typing
-                  poe lint
-                  poe sort-imports -c
-
-    test:
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                python-version: [3.9]
-            fail-fast: false
-
-        steps:
-            - name: check out repo
-              uses: actions/checkout@v2
-
-            - name: set up python
-              uses: actions/setup-python@v2
-              with:
-                  python-version: ${{ matrix.python-version }}
-
-            - name: install poetry action
-              uses: snok/install-poetry@v1.1.1
-              with:
-                  version: 1.1.4
-                  virtualenvs-create: true
-                  virtualenvs-in-project: true
-
-            - name: load cached venv
-              id: cached-poetry-dependencies
-              uses: actions/cache@v2
-              with:
-                  path: .venv
-                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}-${{ secrets.CACHE_VERSION }}
-
-            - name: install poetry dependencies
-              run: poetry install
-              if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-
-            - name: test it
-              run: |
-                  source ./.venv/bin/activate
-                  poe test-coverage -vv
-                  coverage report
-
-    tag_and_publish:
-        needs: [lint, test]
-        if: ${{ !startsWith(github.event.head_commit.message, 'chore') }}
+    publish:
         runs-on: ubuntu-latest
         steps:
             - name: checkout repo
@@ -191,8 +91,7 @@ jobs:
                   variable: TAGGED_VERSION
 
     github_release:
-        needs: [tag_and_publish]
-        if: ${{ !startsWith(github.event.head_commit.message, 'chore') }}
+        needs: [publish]
         runs-on: ubuntu-latest
         steps:
             - name: checkout repo
