--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -202,7 +202,7 @@ jobs:
         steps:
             - run: echo $CONTEXT
               env:
-                  CONTEXT: toJson(github)
+                  CONTEXT: ${{ toJson(github) }}
         # steps:
         #     - name: checkout repo
         #       uses: actions/checkout@v2
