--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -239,4 +239,6 @@ jobs:
               with:
                   token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
                   workflow: Release
-                  inputs: '{ "message": { "bump_type": "${{ env.bump_type }}" } }'
+                  inputs:
+                      '{ "message": { "bump_type": "${{ env.bump_type }}" } }'
+                      # '{ "message": "blah blah", "debug": true }'
