--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -239,6 +239,5 @@ jobs:
               with:
                   token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
                   workflow: Release
-                  inputs:
-                      # '{ "bump_type": "${{ env.bump_type }}" }'
-                      '{ "message": "blah blah", "debug": true }'
+                  inputs: >
+                      '{ "message": "{ "bump_type": "${{ env.bump_type }}" }" }'
