--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -195,7 +195,7 @@ jobs:
                   IS_PRERELEASE: ${{ steps.prerelease.outputs.exists }}
 
     dispatch-event:
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/jk-test' && !startsWith(github.event.head_commit.message, 'chore') }}
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && !startsWith(github.event.head_commit.message, 'chore') }}
         needs: [test, lint, build]
         runs-on: ubuntu-latest
         steps:
